# WEBSCANPRO_NEW

./: ML.py  README.md  anomaly_detection-checkpoint.ipynb  anomaly_detection_report.txt  anomaly_detection_results.csv  anomaly_predictions.csv  cbse.gov.in.html  check_dvwa.py  cleaned_dataset.csv  collect_server_responses.py  crawler_csv.py  crawler_json.py  data_preparation.py  data_preprocessing.ipynb  evaluation_report.txt  extract_features.py  featue_analysis.ipynb  feature_analysis.ipynb  feature_dataset.csv  feature_dataset_ready.md  feature_engineering.ipynb  feature_engineering.py  feature_extraction.ipynb  features_extract.py  features_extracted.csv  get_html.py  idor_ml.py  isolation_forest_model.pkl  main.py  metadata.csv  metadata.json  model_evaluation.py  model_training.py  model_training_evaluation.ipynb  oneclass_svm_model.pkl  payload_generator.py  preprocess_data.py  pyproject.toml  raw_server_responses.csv  render.yaml  (+10 more)
Projects/: requirements.txt
Projects/reports/: vulnerability_report.docx  webscan_summary.md
Projects/scripts/: export_html.py  export_pdf.py  generate_visuals.py  install_dependencies.py  main.py  make_reports.py  merge_and_report.py  predict_and_report.py  (+10 more)
SQL_INJECTION/: decision_tree_model.pkl  random_forest_model.pkl
auth_session/: scanner_ml_integration.py  test_integration.py  validation_checklist.py
depolyment/: dashboard.html  index.html  login.html  register.html  update_front.py
unified_scanner/: config.py  inference_sqli.py  inference_xss.py  reporting.py  requirements.txt  unified_scanner.py  utils.py
(+98 files in other folders)
