[tool.poetry]
name = "webscanpro"
version = "0.1.0"
description = "WebScanPro"
authors = ["Your Name <email>"]
readme = "README.md"
requires-python = ">=3.11,<3.15"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
gunicorn = "^23.0.0"
# your other dependencies here...

[tool.poetry.dev-dependencies]
# dev dependencies here

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
