[tool.poetry]
name = "webscanpro"
version = "0.1.0"
description = "WebScanPro"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
gunicorn = "^23.0.0"
fastapi = "^0.115.0"  # or whatever web framework you use
# add all your other dependencies here

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
# add dev dependencies here

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
