[tool.poetry]
name = "webscanpro"
version = "0.1.0"
description = "WebScanPro"
authors = ["Your Name <email>"]
readme = "README.md"
package-mode = false   # ← ADD THIS LINE

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
gunicorn = "^23.0.0"
fastapi = "^0.115.0"
# ... other dependencies

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
